--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
 <div id="clock">
-    <p class="date">{{ date }}</p>
+    <div class="date" id="higri"> </div>
     <p class="time">{{ time }}</p>
 </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js'></script><script  src="./script.js"></script>
+  
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js'></script><script  src="./script.js"></script><script>
+
+  fetch("http://api.aladhan.com/v1/gToH")
+    .then((response) => response.json())
+    .then((json) => {
+     document.getElementById('higri').innerHTML=json.data.hijri.date+"  "+ json.data.hijri.weekday.ar })
+  </script>
 
 </body>
 </html>
