--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>MAJHCC</title>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Share+Tech+Mono'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Share+Tech+Mono'><link rel="stylesheet" href="./style.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Scheherazade&display=swap" rel="stylesheet">
 
 </head>
 <body>
 <div id="clock">
-    <div class="date" id="higri"> </div>
+    <div class="date" id="higri" style="font-family: 'Scheherazade', serif;"> </div>
     <p class="time">{{ time }}</p>
 </div>
   
