increse font size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="clock">
-    <div class="date" id="higri" style="font-family: 'Scheherazade', serif;"> </div>
+    <div class="date" id="higri" style="font-family: 'Scheherazade', serif;font-size: 40px;"> </div>
     <p class="time">{{ time }}</p>
 </div>
   
