--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MAJHCC</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://instagram.fmct1-3.fna.fbcdn.net/v/t51.2885-19/s150x150/241379014_236854771700188_8729875219923939765_n.jpg?_nc_ht=instagram.fmct1-3.fna.fbcdn.net&_nc_ohc=ytiAuo4mjRkAX9YceHO&edm=ACWDqb8BAAAA&ccb=7-4&oh=c017aaec7ff326d66401941dc1eb70ee&oe=61565767&_nc_sid=1527a3" />
+  <link rel="icon" href="https://telegra.ph/file/d00a1ad17544ea399877c.png" type="image/x-icon">
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Share+Tech+Mono'><link rel="stylesheet" href="./style.css"><link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Scheherazade&display=swap" rel="stylesheet">
